fix: input clear on comment submit, add favicon
fix format for long comments to break word instead
of overflowing

--- a/src/styles/Comments.module.css
+++ b/src/styles/Comments.module.css
@@ -19,6 +19,12 @@
 
 .commentHeader {
   font-size: 1.4rem;
+  overflow-wrap: break-word;
+  max-width: 100%;
+}
+
+.commentContentPara {
+  overflow-wrap: break-word;
 }
 
 .profilePicCommentUserCont {
